2001-04-32  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: Support repo and (the somewhat deprecated)
	  alt-external template instantiations.

2001-04-32  Dancer Vesperman <dancer@users.sourceforge.net>
	* g++ v3.0 can inline an implementation body....but that makes
	  it invisible to other translation units (because it's inline and
	  no longer exists as a seperate entity. Duh). Therefore, actors.cc:
	  except add_dirty() from being inlined under G++ v3 and later.
	  Same deal for get_tile_info()
	  More on this in a later update.
	* objs/objlist.h: Mark some members const to improve code-generation

2001-04-22  Max Horn  <max@quendi.de>
	* lots of namespace std:: changes, made it compile on MacOS again
	  (still need to implement U7ListFiles)

2001-04-22  Ryan Nunn <triforce@merlin.net.au>
	* gumps/Newfile_gump.* : Changed Date format display.

2001-04-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* imagewin/imagewin.*, iwin8.*: moved mini_screenshot to iwin8, use
	a nearest average colour scaler
	* files/listfiles.cc: added config.h
	* Makefile.am: changed library order
	* gumps/Newfile_gump.cc: put some debugging output in #ifdef DEBUG's

2001-04-22  Ryan Nunn <triforce@merlin.net.au>
	* Makefiles.* : Added files/listfiles.* and gumps/Newfile_gump.*
	* actorio.cc : Made a change to the size of the array used when reading
	  a NPC name from npc.dat. 
	* bggame.cc, sigame.cc : Added exult.flx and exultbg.flx to list of
	  resources so they can be viewed in the shape browser.
	* fnames.h : Added #defines used by new file gump.
	* gamedat.cc, gamewin.cc, gamewin.h : Added methods for writing and
	  reading data for the new save gump. Also fixed a bug when calling
	  get_gump_rect for a gump that had a shape that was in exult.flx.
	* keyactions.*, keys.* : Added GAME_MENU action to be used to activate
	  game menu.
	* gumps/Gamemenu_gump.cc : Load/Save Game option now create a new style
	  File Gump not ye olde one.