@@ -27,6 +27,7 @@ void ActionAbout(int* params);
 void ActionHelp(int* params);
 void ActionCloseGumps(int* params);
 void ActionMenuGump(int* params);
+void ActionNewfileGump(int* params);
 
 void ActionScreenshot(int* params);
 void ActionRepaint(int* params);
