@@ -1,8 +1,13 @@
-2001-04-32  Dancer Vesperman <dancer@users.sourceforge.net>
+2001-04-23  Ryan Nunn  <triforce@merlin.net.au>
+	* ChangeLog : Fixed Dancer's small date typo... 2001-04-32 :)
+	* keys.*, keyactions.* : Key action "newfile_gump" to activate the new
+	  file gump without having to go into the game menu.
+
+2001-04-23  Dancer Vesperman <dancer@users.sourceforge.net>
 	* configure.in: Support repo and (the somewhat deprecated)
 	  alt-external template instantiations.
 
-2001-04-32  Dancer Vesperman <dancer@users.sourceforge.net>
+2001-04-23  Dancer Vesperman <dancer@users.sourceforge.net>
 	* g++ v3.0 can inline an implementation body....but that makes
 	  it invisible to other translation units (because it's inline and
 	  no longer exists as a seperate entity. Duh). Therefore, actors.cc:
